# rebe-shell

./: .eslintrc.json  .gitignore  DEVELOPMENT.md  LICENSE  README.md  TEST_REPORT.md  VISION.md  claude-code-session-design.md  index.html  vite.config.ts
components/docs/assessments/: 2025-10-27-14-30-00-rebe-shell-component-learnings.md
conversations/001-rebe-shell/: .dockerignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DOCKER.md  Dockerfile  FUTURE.md  GETTING_STARTED.md  HANDOVER.md  README.md  VISION.md  VISION_COMPREHENSIVE.md  VISION_ORIGINAL.md  docker-compose.yml  index.html  package.json  start.sh
conversations/001-rebe-shell/automation/: .env.example  EXECUTION_CHECKLIST.md  FIX_PATHS_PROMPT.md  INSTALL.md  MESSAGE_FROM_MAIN_SESSION.md  QUICK_START.md  README.md  README_AUTOMATION.md  SETUP_COMPLETE.md  package.json
conversations/001-rebe-shell/automation/scripts/: api_submit_all.js  submit_all.js  submit_copilot.js  submit_deepseek.js  submit_gemini.js  submit_grok.js
conversations/001-rebe-shell/automation/scripts-migrated/: README.md  submit_all.js  submit_copilot.js  submit_deepseek.js  submit_gemini.js  submit_grok.js
conversations/001-rebe-shell/backend/: Cargo.toml  README.md
conversations/001-rebe-shell/backend/src/: main.rs  pty.rs
conversations/001-rebe-shell/docs/: AI_PEER_REVIEW_PROMPT.md  INTEGRATION_COMPLETE.md  PHASE3_COMPLETE.md  README.md  REBE_BROWSER_ASSESSMENT.md  REFACTOR_REMOVE_BROWSER.md  REFACTOR_SUMMARY.md
conversations/001-rebe-shell/docs/assessments/: 2025-10-27-14-30-00-four-week-evolution-deep-dive.md  2025-10-27-16-00-00-rebe-shell-v2-requirements-from-pain-points.md  2025-10-27-21-15-00-rebe-ecosystem-updates-assessment.md  2025-10-27-21-45-00-rebe-core-phase1-complete.md  2025-10-27-22-15-00-task2-pty-extraction-complete.md  2025-10-27-22-20-00-task3-ssh-extraction-complete.md  2025-10-27-23-20-00-task4-streaming-extraction-complete.md  2025-10-27-23-25-00-task5-circuit-protocol-extraction-complete.md
conversations/001-rebe-shell/rebe-browser/: .env.example  .gitignore  QUICK_REF.md  README.md  SESSION_START.md  package.json.template
conversations/001-rebe-shell/rebe-core/: Cargo.toml
conversations/001-rebe-shell/rebe-core/src/: lib.rs
conversations/001-rebe-shell/rebe-core/src/circuit_breaker/: mod.rs
conversations/001-rebe-shell/rebe-core/src/protocol/: mod.rs
conversations/001-rebe-shell/rebe-core/src/pty/: mod.rs
conversations/001-rebe-shell/rebe-core/src/ssh/: mod.rs  pool.rs
conversations/001-rebe-shell/rebe-core/src/stream/: mod.rs
conversations/001-rebe-shell/src/: main.ts  style.css
conversations/001-rebe-shell/src-tauri/: Cargo.toml  tauri.conf.json
conversations/001-rebe-shell/src-tauri/src/: main.rs
conversations/001-rebe-shell/src-tauri/src/circuit_breaker/: mod.rs
conversations/001-rebe-shell/src-tauri/src/ssh/: mod.rs  pool.rs
conversations/001-rebe-shell/src-tauri/src/wasm/: mod.rs
conversations/001-rebe-shell/tests/: README.md  integration.test.js  self_test.sh
docs/: ADR-011-pivot-to-web-architecture.md  DECISIONS.md
meta/: ARTIFACTS.md  BLOCKCHAIN.md  CONVERSATIONS.md  VERSIONING.md
rebe/thecy/distillation/: 00-QUICK-START.md  01-action-plan.md
rebe/thecy/synthesis/eyesears/: 01-rebe-shell-deep-dive.md  02-rebe-browser-assessment.md  03-architectural-patterns-analysis.md  04-session-metacognition.md
src/: main.ts  style.css
src-tauri/src/protocol/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/stream/: mod.rs
tests/: architecture_validation.rs  integration_test.rs
