[workspace]
members = [
    "rebe-core",
    "backend",
    "src-tauri",
]

# Workspace-wide dependency resolution
# This ensures all workspace members use the same versions
resolver = "2"

[workspace.package]
edition = "2021"

# Shared dependencies across workspace members
[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4"] }
