[package]
name = "rebe-shell-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Shared rebe-core library
rebe-core = { path = "../rebe-core" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PTY support
portable-pty = "0.8"

# Async utilities
futures = "0.3"
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for session IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 encoding for binary data over JSON
base64 = "0.21"

# HTTP client for service discovery
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
