[package]
name = "rebe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# PTY support
portable-pty = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for session IDs
uuid = { version = "1.6", features = ["v4"] }

# Logging
tracing = "0.1"

# Async utilities
bytes = "1.5"

# SSH support
ssh2 = "0.9"

# Futures
futures = "0.3"
